Implement check for su binary